--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="drawing-board">
         <canvas></canvas>
       </section>
-      <section class="tool-bar">
+      <section class="tools-bar">
         <div class="row">
           <label class="title">Tools</label>
           <ul class="options">
